# synthgen

./: .cursorrules  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.consumer  Dockerfile.ui  Dockerfile.worker  README.md  architecture_diagram.mmd  consumer-requirements.txt  deploy_images.ps1  deploy_images.sh  deploy_k8s.ps1  deploy_k8s.sh  docker-compose-local.yml  docker-compose.yml  install.ps1  litellm_config.yaml  pyproject.toml  rabbitmq-definitions.json  requirements.txt  synthgen-0.1.0.tgz  tasks.jsonl  wildcat_tasks.jsonl  worker-requirements.txt
.github/workflows/: docker-release.yml
consumer/: Cargo.toml
consumer/src/: db.rs  lib.rs  llm_wrapper.rs  main.rs  settings.rs  task_status.rs
consumer/src/schemas/: llm_response.rs  task_status.rs
src/: __init__.py  main.py  test.py
src/api/: __init__.py
src/api/endpoints/: batches.py  bulk_export.py  bulk_status.py  bulk_tasks.py  health.py  status.py  tasks.py  token.py
src/core/: auth.py  config.py
src/database/: elastic_session.py  session.py
src/models/: event.py
src/schemas/: __init__.py  batch.py  health_status.py  status.py  task.py
src/services/: consumer.py  database.py  message_queue.py  storage.py  worker.py
src/utils/: llm_utils.py
synthgen-chart/: .yamllint  Chart.yaml  README.md  values.yaml
synthgen-chart/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  configmap.yaml  consumer-deployment.yaml  elasticsearch-deployment.yaml  ingress.yaml  litellm-deployment.yaml  minio-deployment.yaml  rabbitmq-deployment.yaml  secrets.yaml  storage-class.yaml  ui-deployment.yaml  worker-deployment.yaml
ui/synthgen-ui/: Dockerfile  package-lock.json  package.json
ui/synthgen-ui/src/app/: globals.css  layout.tsx
ui/synthgen-ui/src/app/(dashboard)/: layout.tsx
ui/synthgen-ui/src/app/health/: route.ts
ui/synthgen-ui/src/app/login/: page.tsx
ui/synthgen-ui/src/components/: theme-toggle.tsx
ui/synthgen-ui/src/components/layout/: header.tsx  main-nav.tsx
ui/synthgen-ui/src/contexts/: auth-context.tsx  refresh-context.tsx
ui/synthgen-ui/src/lib/: config.ts  types.ts
ui/synthgen-ui/src/services/: api.ts
(+19 files in other folders)
