[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
config = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
lapin = { version = "2.5.0", features = ["rustls"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"], default-features = false }
futures = "0.3"
futures-util = "0.3"
chrono = "0.4.39"
http = "1.2.0"
