[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
config = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
lapin = { version = "2.5.0", features = ["rustls"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"], default-features = false }
futures = "0.3"
futures-util = "0.3"
chrono = { version = "0.4.39", features = ["serde"] }
http = "1.2.0"
uuid = { version = "1.0", features = ["v4"] }
tokio-postgres = { version = "0.7.12", features = ["with-serde_json-1", "with-chrono-0_4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-lite = "1.13"
deadpool = "0.12.1"
deadpool-postgres = "0.14.1"
elasticsearch = "8.17.0-alpha.1"
sha2 = "0.10.8"
base64 = "0.22.1"