[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
config = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
lapin = { version = "2.5.0", features = ["rustls"] }
chrono = { version = "0.4.39", features = ["serde"] }
http = "1.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-lite = "1.13"
elasticsearch = "8.17.0-alpha.1"